Fix negative .row margin resulting in unwanted scrollbars

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -500,8 +500,6 @@ h2 {
 .row {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px
 }
 
 .col-md-2,
